--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Phrase registration
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Phrase registration. </ion-card-title>
+      
+    </ion-card-header>
+  
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-textarea  fill="outline"   [autoGrow]="true" [(ngModel)]="frase"></ion-textarea>
+        </ion-item>
+      </ion-list>
+      <ion-button color="primary" expand="block" (click)="NuevaFrase()">Save the sentense</ion-button>
+      <ion-button color="danger" expand="block" (click)="Clear()">Clear</ion-button>
+    </ion-card-content>
+  </ion-card>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+
+ 
 </ion-content>
