--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,24 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
+    <ion-title  slot="start">
+      Phrases List
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button fill="outline" color="danger" (click)="DeleteAll()"><ion-icon name="trash-outline"></ion-icon>Delete All List</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-searchbar show-cancel-button="never" (ionInput)="handleInput($event)"></ion-searchbar>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <cdk-virtual-scroll-viewport itemSize="3" minBufferPx="900" maxBufferPx="1300">
+    <ion-item  *cdkVirtualFor="let frase of resultado; let index">
+      <ion-label>{{frase}}</ion-label>
+      <ion-button slot="end" fill="clear" color="danger" (click)="Eliminar(index)"><ion-icon  name="trash-outline"></ion-icon></ion-button>
+      
+    </ion-item>
+  </cdk-virtual-scroll-viewport>
 </ion-content>
